[package]
name = "rtemo"
version = "0.1.0"
authors = ["yopox <yopoxdev@gmail.com>"]
description = "A text mode editor."
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[dependencies]
bevy = { version = "0.10", default-features = false, features = ["bevy_asset", "bevy_winit", "png", "x11"] }
bevy_asset_loader = { version = "0.16", default-features = false, features = ["2d"] }
bevy_common_assets = { version = "0.6", features = ["ron"] }
bevy_text_mode = "0.1.1"
strum = "0.24"
strum_macros = "0.24"

rand = { version = "0.8", features = ["alloc"]}
bevy_pkv = { version = "0.7" }
serde = { version = "1.0" }

winit = { version = "0.28", default-features = false }
image = { version = "0.24", default-features = false }

cli-clipboard = "0.4.0"